test/loop/confidence/errors/verify_error_6.loop
# Scope resolution error for variables in pattern matching functions

fail =>
  []    : []

scope(thing) =>
  /stuff/  : x
  *, *     : ''


main ->
  scope('hi')
